kubernetes/services/splitpro.yml
---
apiVersion: v1
kind: Service
metadata:
  name: splitpro
  namespace: default
spec:
  ports:
    - protocol: TCP
      name: web
      port: 3000
  selector:
    app: splitpro

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: splitpro
  namespace: default
spec:
  tls:
    - hosts:
        - splitpro.${DOMAIN_NAME}
      secretName: ${DOMAIN_NAME}-tls
  rules:
    - host: splitpro.${DOMAIN_NAME}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: splitpro
                port:
                  name: web

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: splitpro
  namespace: default
  labels:
    app: splitpro
  annotations:
    keel.sh/policy: minor
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@weekly"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: splitpro
  template:
    metadata:
      labels:
        app: splitpro
    spec:
      containers:
        - name: app
          image: ossapps/splitpro:latest
          resources:
            requests:
              memory: 128Mi
              cpu: 125m
            limits:
              memory: 2Gi
              cpu: 2000m
          ports:
            - name: web
              containerPort: 3000
